--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                     <div class="md:w-3/5">
                         <h3 class="text-2xl font-semibold text-gray-800">Psikolog Onur Uslu</h3>
                         <!-- BİLGİ: Kendi uzmanlık alanınızı ve felsefenizi buraya ekleyin. -->
-                        <p class="mt-4 text-gray-600">Boğaziçi Üniversitesi Psikoloji bölümünden mezun olduktan sonra, Bilişsel Davranışçı Terapi (BDT) ve Şema Terapi alanlarında uzmanlık eğitimlerimi tamamladım. Terapideki temel felsefem, her bireyin içinde iyileşme ve büyüme potansiyelini taşıdığına olan inancımdır. Amacım, bu potansiyeli ortaya çıkarmanız için size güvenli ve empatik bir ortam sunmaktır.</p>
+                        <p class="mt-4 text-gray-600">Selçuk Üniversitesi Psikoloji lisans bölümünden onur derecesi ile mezun oldum. Psikoloji alanındaki bilgi birikimimi Prof. Dr. Mehmet Hakan Türkçapar ve ekibinden aldığım Bilişsel Davranışçı Terapi eğitimi ile pekiştirdim. Aynı zamanda bilinçli farkındalık temelli terapi ve oyun terapisi eğitimleri almış biri olarak bu alanlarda yetkinliğim bulunmaktadır. Eğitim hayatım boyunca rehber klinik, gebze huzurevi müdürlüğü ve eser psikolojik danışmanlık merkezinde staj süreçlerimi gerçekleştirdim. Yetişkin ve ergen bireylere odaklanarak Bilişsel Davranışçı Terapi ekolü bağlamında onlara destek sağlıyorum. Birlikte çalışarak yaşadığınız sorunlar hakkında yardımcı olmak ve sizlere daha iyi bir hayat kalitesi sunmayı isterim.</p>
                         <p class="mt-4 text-gray-600">Danışanlarımla birlikte, düşünce kalıplarını, duygusal tepkileri ve davranışları anlamlandırarak daha sağlıklı başa çıkma mekanizmaları geliştiriyoruz.</p>
-                        
+                        <p class="mt-4 text-gray-600">Çalışma alanlarım: Depresyon (Prof. Dr. Kadir Özdel) - Panik bozukluk ve agorafobi (Prof. Dr. Hakan Türkçapar) - Anksiyete bozuklukları (Prof. Dr. Ercan Altınöz) - Travma sonrası stres bozukluğu TSSB (Prof. Dr. Aslıhan Dönmez) - Somatoform ve Sağlık kaygısı bozukluğu (Prof .Dr. Selçuk Aslan) - Obsesif Kompulsif Bozukluk OKB (Hakan Türkçapar) - İlişki problemleri ve duygu düzenleme becerileri.</p>
                         <div class="mt-8 grid md:grid-cols-3 gap-6">
                             <div class="text-center p-4 bg-secondary rounded-lg">
                                 <div class="text-3xl mb-2 text-primary">🤝</div>
@@ -163,9 +163,9 @@
                     </div>
                     <!-- BLOG YAZISI 2 -->
                      <div class="bg-white rounded-lg custom-shadow overflow-hidden group">
-                        <img src="https://placehold.co/600x400/EBF5FF/4A4A4A?text=Yazı+Görseli" alt="Blog Yazısı Görseli" class="w-full h-48 object-cover group-hover:scale-105 transition-transform">
+                        <img src="psikolog-onur-uslu-blog/images/bdt.jpeg" alt="Bilişsel Davranışçı Terapi" class="w-full h-48 object-cover group-hover:scale-105 transition-transform">
                         <div class="p-6">
-                            <h3 class="text-xl font-bold text-gray-800 mb-2">İlişkilerde Sağlıklı Sınırlar Koymak</h3>
+                            <h3 class="text-xl font-bold text-gray-800 mb-2">Bilişsel Davranışçı Terapi (BDT): Zihinsel Esenliğe Giden Bilimsel Yolculuk</h3>
                             <p class="text-gray-600 mb-4">Kendinize ve ilişkinize duyduğunuz saygıyı artırmak için sınırlar neden önemlidir ve nasıl konulur...</p>
                             <a href="#" class="text-primary font-semibold">Devamını Oku &rarr;</a>
                         </div>
