Modal yapıları eklendı ve resımler olusturuldu. Bazı hatalar Gıderıldı.

--- a/index.html
+++ b/index.html
@@ -150,35 +150,144 @@
                 </div>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- BLOG YAZISI 1 -->
-                    <div class="bg-white rounded-lg custom-shadow overflow-hidden group">
-                        <!-- BLOG FOTOĞRAFI -->
-                        <img src="https://placehold.co/600x400/EBF5FF/4A4A4A?text=Yazı+Görseli" alt="Blog Yazısı Görseli" class="w-full h-48 object-cover group-hover:scale-105 transition-transform">
-                        <div class="p-6">
-                            <!-- BLOG BAŞLIĞI -->
-                            <h3 class="text-xl font-bold text-gray-800 mb-2">Kaygıyla Başa Çıkmanın 5 Pratik Yolu</h3>
-                            <!-- BLOG ÖZETİ -->
-                            <p class="text-gray-600 mb-4">Günlük hayatta anksiyete ile başa çıkmanıza yardımcı olacak basit ve etkili teknikler...</p>
-                            <a href="#" class="text-primary font-semibold">Devamını Oku &rarr;</a>
-                        </div>
-                    </div>
+<div class="bg-white rounded-lg custom-shadow overflow-hidden group">
+    <!-- BLOG FOTOĞRAFI -->
+    <img src="psikolog-onur-uslu-blog/images/WhatsApp Image 2025-07-09 at 12.18.12.jpeg" alt="Blog Yazısı Görseli" class="w-full h-48 object-cover group-hover:scale-105 transition-transform">
+    <div class="p-6">
+        <!-- BLOG BAŞLIĞI -->
+        <h3 class="text-xl font-bold text-gray-800 mb-2">Kaygıyla Başa Çıkmanın 5 Pratik Yolu</h3>
+        <!-- BLOG ÖZETİ -->
+        <p class="text-gray-600 mb-4">Günlük hayatta anksiyete ile başa çıkmanıza yardımcı olacak basit ve etkili teknikler...</p>
+        <a href="#" class="text-primary font-semibold" onclick="openModal('modal-kaygi')">Devamını Oku &rarr;</a>
+    </div>
+</div>
+
+<!-- Modal: Kaygıyla Başa Çıkmanın 5 Pratik Yolu -->
+<div id="modal-kaygi" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white p-6 rounded-lg max-w-2xl w-full overflow-y-auto max-h-[90vh]">
+        <h2 class="text-xl font-bold mb-4">Kaygıyla Başa Çıkmanın 5 Pratik Yolu</h2>
+        <p class="mb-4">Kaygı, günlük yaşamın bir parçası olabilir, ancak onunla başa çıkmak için etkili yöntemler geliştirmek önemlidir. İşte size yardımcı olabilecek 5 pratik yol:</p>
+        <ol class="list-decimal list-inside space-y-4">
+            <li>
+                <strong>Derin Nefes Alın:</strong> Kaygı anında derin nefes almak, vücudunuzu sakinleştirir ve zihninizi rahatlatır. Burnunuzdan derin bir nefes alın, birkaç saniye tutun ve yavaşça ağzınızdan verin.
+            </li>
+            <li>
+                <strong>Fiziksel Aktivite:</strong> Egzersiz yapmak, stres hormonlarını azaltır ve mutluluk hormonlarını artırır. Günlük yürüyüşler veya yoga gibi aktiviteler kaygıyı hafifletmek için harikadır.
+            </li>
+            <li>
+                <strong>Zihinsel Farkındalık:</strong> Mindfulness veya meditasyon teknikleri, anı yaşamanıza ve kaygıyı azaltmanıza yardımcı olabilir. Günlük 10 dakikalık bir meditasyon rutini oluşturabilirsiniz.
+            </li>
+            <li>
+                <strong>Destek Alın:</strong> Kaygıyla başa çıkmakta zorlanıyorsanız, bir terapistten veya danışmandan destek almak önemlidir. Profesyonel yardım, kaygıyı yönetmek için etkili stratejiler sunabilir.
+            </li>
+            <li>
+                <strong>Sağlıklı Alışkanlıklar:</strong> Yeterli uyku almak, dengeli beslenmek ve kafein tüketimini sınırlamak, kaygıyı azaltmada önemli bir rol oynar.
+            </li>
+        </ol>
+        <p class="mt-4">Unutmayın, kaygı ile başa çıkmak bir süreçtir ve her birey için farklı yöntemler etkili olabilir. Kendinize zaman tanıyın ve ihtiyaç duyduğunuzda destek istemekten çekinmeyin.</p>
+        <button id="close-modal-kaygi" class="mt-6 bg-primary text-white px-4 py-2 rounded-lg">Kapat</button>
+    </div>
+</div>
                     <!-- BLOG YAZISI 2 -->
                      <div class="bg-white rounded-lg custom-shadow overflow-hidden group">
                         <img src="psikolog-onur-uslu-blog/images/bdt.jpeg" alt="Bilişsel Davranışçı Terapi" class="w-full h-48 object-cover group-hover:scale-105 transition-transform">
                         <div class="p-6">
                             <h3 class="text-xl font-bold text-gray-800 mb-2">Bilişsel Davranışçı Terapi (BDT): Zihinsel Esenliğe Giden Bilimsel Yolculuk</h3>
                             <p class="text-gray-600 mb-4">Kendinize ve ilişkinize duyduğunuz saygıyı artırmak için sınırlar neden önemlidir ve nasıl konulur...</p>
-                            <a href="#" class="text-primary font-semibold">Devamını Oku &rarr;</a>
+                            <a href="#" class="text-primary font-semibold" onclick="openModal('modal-bdt')">Devamını Oku &rarr;</a>
                         </div>
+                        <!-- Modal: Bilişsel Davranışçı Terapi -->
+                         <!-- Modal: Kendinize ve İlişkinize Duyduğunuz Saygının Temeli -->
+            <div id="modal-bdt" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+            <div class="bg-white p-6 rounded-lg max-w-2xl w-full overflow-y-auto max-h-[90vh]">
+                <h2 class="text-xl font-bold mb-4">Kendinize ve İlişkinize Duyduğunuz Saygının Temeli: Sınırlar Neden Önemlidir ve Nasıl Konulur?</h2>
+                <p class="mb-4">Kişisel sınırları, evinizin etrafındaki bir çit gibi düşünebilirsiniz. Bu çit, neyin size ait olduğunu (duygularınız, zamanınız, enerjiniz) ve neyin başkalarına ait olduğunu belirler. Kimi ve neyi içeri alacağınıza siz karar verirsiniz. Sağlıklı sınırlar, ne "evet" diyeceğinizi bildiğiniz kadar, neye ve ne zaman "hayır" diyeceğinizi bilmektir.</p>
+        
+                <h3 class="text-lg font-semibold mt-6 mb-2">Sınırlar Neden Bu Kadar Önemlidir?</h3>
+                <p class="mb-4">Sınırlar, bencillik veya başkalarını dışlamak anlamına gelmez. Aksine, hem kendinize hem de ilişkilerinize duyduğunuz saygının en net göstergesidir.</p>
+
+            <h4 class="text-md font-bold mt-4 mb-2">1. Kendinize Duyduğunuz Saygı İçin:</h4>
+            <ul class="list-disc list-inside space-y-2">
+                <li><strong>Öz-Değeri Korur:</strong> Sınır koymak, "Benim ihtiyaçlarım, duygularım ve zamanım değerlidir" demenin en somut yoludur.</li>
+                <li><strong>Tükenmişliği Önler:</strong> Enerjinizi nerede harcayacağınızı kontrol etmenizi sağlar ve zihinsel tükenmişliği önler.</li>
+                <li><strong>Öfke ve Kırgınlığı Azaltır:</strong> Sınırlar, öfke ve kırgınlık birikimini önler.</li>
+                <li><strong>Otonomi Sağlar:</strong> Kendi hayatınızın kontrolünün sizde olduğunu hissettirir.</li>
+        </ul>
+
+        <h4 class="text-md font-bold mt-4 mb-2">2. İlişkilerinize Duyduğunuz Saygı İçin:</h4>
+        <ul class="list-disc list-inside space-y-2">
+            <li><strong>Beklentileri Netleştirir:</strong> Yanlış anlaşılmaları ve hayal kırıklıklarını azaltır.</li>
+            <li><strong>Güveni Artırır:</strong> Sınırlarınıza sadık kaldığınızda, insanlar sizin tutarlı olduğunuzu anlar.</li>
+            <li><strong>Bağımlılığı Değil, Sağlıklı Bağlılığı Teşvik Eder:</strong> Herkesin bireyselliğini korumasına olanak tanır.</li>
+            <li><strong>İnsanlara Size Nasıl Davranacaklarını Öğretir:</strong> Sınırlarınız, başkaları için bir kullanım kılavuzu gibidir.</li>
+        </ul>
+
+        <h3 class="text-lg font-semibold mt-6 mb-2">Sağlıklı Sınırlar Nasıl Konulur?</h3>
+        <ol class="list-decimal list-inside space-y-2">
+            <li><strong>Kendinizi Tanıyın ve İhtiyaçlarınızı Belirleyin:</strong> Hangi durumlarda rahatsız hissediyorsunuz? Fiziksel, duygusal ve zihinsel sınırlarınızı düşünün.</li>
+            <li><strong>Açık, Net ve Nazik Olun:</strong> İhtiyacınızı doğrudan ifade edin. "Ben Dili" kullanarak yapıcı bir iletişim kurun.</li>
+            <li><strong>Küçük Adımlarla Başlayın:</strong> Güvendiğiniz bir yakınınızla pratik yaparak başlayın.</li>
+            <li><strong>Tutarlı Olun:</strong> Sınırların işe yaraması için tutarlılık şarttır.</li>
+            <li><strong>Tepkilere Hazırlıklı Olun:</strong> İnsanlar şaşırabilir veya suçluluk hissettirebilir. Sakin ve kararlı kalın.</li>
+            <li><strong>Suçluluk Hissinin Normal Olduğunu Kabul Edin:</strong> Kendi ihtiyaçlarınızı gözetmek bencillik değil, öz-bakımdır.</li>
+        </ol>
+
+        <h3 class="text-lg font-semibold mt-6 mb-2">BDT (Bilişsel Davranışçı Terapi) ve Sınırlar</h3>
+        <p class="mb-4">BDT, düşüncelerimizin duygularımızı ve davranışlarımızı nasıl etkilediğine odaklanır. Sınır koymakta zorlanan insanların altında genellikle işlevsiz düşünce kalıpları ve temel inançlar yatar.</p>
+        <ul class="list-disc list-inside space-y-2">
+            <li><strong>Otomatik Düşünceleri Belirleme:</strong> Sınır koymayı düşündüğünüzde aklınıza gelen olumsuz düşünceleri fark edin.</li>
+            <li><strong>Temel İnançlara Meydan Okuma:</strong> Sağlıksız temel inançları sorgulayarak daha gerçekçi olanlarla değiştirin.</li>
+            <li><strong>Davranışsal Deneyler:</strong> Küçük adımlarla sınır koymayı deneyin ve sonuçları gözlemleyin.</li>
+        </ul>
+
+        <button id="close-modal-bdt" class="mt-6 bg-primary text-white px-4 py-2 rounded-lg">Kapat</button>
+    </div>
+    </div>
                     </div>
                     <!-- BLOG YAZISI 3 -->
-                     <div class="bg-white rounded-lg custom-shadow overflow-hidden group">
-                        <img src="https://placehold.co/600x400/EBF5FF/4A4A4A?text=Yazı+Görseli" alt="Blog Yazısı Görseli" class="w-full h-48 object-cover group-hover:scale-105 transition-transform">
-                        <div class="p-6">
-                            <h3 class="text-xl font-bold text-gray-800 mb-2">Şema Terapi Nedir?</h3>
-                            <p class="text-gray-600 mb-4">Hayatınızda tekrar eden olumsuz kalıpların kökenlerini anlamak ve değiştirmek için güçlü bir yaklaşım...</p>
-                            <a href="#" class="text-primary font-semibold">Devamını Oku &rarr;</a>
-                        </div>
-                    </div>
+<div class="bg-white rounded-lg custom-shadow overflow-hidden group">
+    <!-- BLOG FOTOĞRAFI -->
+    <img src="psikolog-onur-uslu-blog/images/sema therapy.webp" alt="Blog Yazısı Görseli" class="w-full h-48 object-cover group-hover:scale-105 transition-transform">
+    <div class="p-6">
+        <!-- BLOG BAŞLIĞI -->
+        <h3 class="text-xl font-bold text-gray-800 mb-2">Şema Terapi Nedir?</h3>
+        <!-- BLOG ÖZETİ -->
+        <p class="text-gray-600 mb-4">Hayatınızda tekrar eden olumsuz kalıpların kökenlerini anlamak ve değiştirmek için güçlü bir yaklaşım...</p>
+        <a href="#" class="text-primary font-semibold" onclick="openModal('modal-sema-terapi')">Devamını Oku &rarr;</a>
+    </div>
+</div>
+
+<!-- Modal: Şema Terapi Nedir? -->
+<div id="modal-sema-terapi" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white p-6 rounded-lg max-w-2xl w-full overflow-y-auto max-h-[90vh]">
+        <h2 class="text-xl font-bold mb-4">Şema Terapi Nedir?</h2>
+        <p class="mb-4">Şema terapi, hayatınızda tekrar eden olumsuz kalıpların kökenlerini anlamak ve değiştirmek için güçlü bir psikoterapi yaklaşımıdır. Bu terapi yöntemi, çocukluk döneminde oluşan ve yetişkinlikte sorunlara yol açan şemaları hedef alır.</p>
+        <h3 class="text-lg font-semibold mt-6 mb-2">Şema Terapinin Temel İlkeleri</h3>
+        <ul class="list-disc list-inside space-y-4">
+            <li><strong>Şemalar:</strong> Çocukluk döneminde oluşan, bireyin kendisi, diğer insanlar ve dünya hakkındaki temel inançlarıdır. Örneğin, "Ben yetersizim" veya "Kimseye güvenemem" gibi düşünceler birer şemadır.</li>
+            <li><strong>Şema Modları:</strong> Şemaların aktif hale geldiği durumlarda bireyin sergilediği davranış ve duygusal tepkilerdir. Örneğin, öfke patlamaları veya aşırı çekingenlik.</li>
+            <li><strong>Şema Terapinin Amacı:</strong> Olumsuz şemaları fark etmek, bunların kökenlerini anlamak ve daha sağlıklı düşünce ve davranış kalıpları geliştirmektir.</li>
+        </ul>
+        <h3 class="text-lg font-semibold mt-6 mb-2">Şema Terapinin Kullanım Alanları</h3>
+        <p class="mb-4">Şema terapi, özellikle aşağıdaki durumlarda etkili bir şekilde kullanılabilir:</p>
+        <ul class="list-disc list-inside space-y-4">
+            <li>İlişki sorunları</li>
+            <li>Özgüven eksikliği</li>
+            <li>Travma sonrası stres bozukluğu</li>
+            <li>Obsesif kompulsif bozukluk (OKB)</li>
+            <li>Depresyon ve anksiyete</li>
+        </ul>
+        <h3 class="text-lg font-semibold mt-6 mb-2">Şema Terapide Kullanılan Teknikler</h3>
+        <ol class="list-decimal list-inside space-y-4">
+            <li><strong>Şema Aktivasyon Çalışmaları:</strong> Bireyin şemalarını tetikleyen durumları belirlemek ve bu durumlara verdiği tepkileri incelemek.</li>
+            <li><strong>Görselleştirme Teknikleri:</strong> Çocukluk anılarına dönerek şemaların kökenlerini anlamaya çalışmak.</li>
+            <li><strong>Davranışsal Deneyler:</strong> Yeni ve sağlıklı davranış kalıplarını denemek ve sonuçlarını gözlemlemek.</li>
+            <li><strong>Reparenting (Yeniden Ebeveynlik):</strong> Terapistin, bireyin çocuklukta ihtiyaç duyduğu ancak alamadığı duygusal desteği sağlaması.</li>
+        </ol>
+        <p class="mt-4">Şema terapi, bireyin kendini daha iyi anlamasına ve daha sağlıklı ilişkiler kurmasına yardımcı olan etkili bir yöntemdir. Bu süreçte, birey geçmişteki olumsuz deneyimlerin etkilerini azaltarak daha tatmin edici bir yaşam sürdürebilir.</p>
+        <button id="close-modal-sema-terapi" class="mt-6 bg-primary text-white px-4 py-2 rounded-lg">Kapat</button>
+    </div>
+</div>
                 </div>
             </div>
         </section>
@@ -203,6 +312,10 @@
                                 <label for="email" class="block text-gray-700 font-semibold mb-2">E-posta Adresi</label>
                                 <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary" required>
                             </div>
+                        </div>
+                        <div class="mt-6">
+                            <label for="phone" class="block text-gray-700 font-semibold mb-2">Telefon Numarası</label>
+                            <input type="tel" id="phone" name="phone" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary" placeholder="+90 555 555 55 55" required>
                         </div>
                         <div class="mt-6">
                             <label for="subject" class="block text-gray-700 font-semibold mb-2">Konu</label>
