Mobile kısımda hata düzeltildi.

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 <div id="modal-sema-terapi" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
     <div class="bg-white p-6 rounded-lg max-w-2xl w-full overflow-y-auto max-h-[90vh]">
         <h2 class="text-xl font-bold mb-4">Şema Terapi Nedir?</h2>
-        <p class="mb-4">Şema terapi, hayatınızda tekrar eden olumsuz kalıpların kökenlerini anlamak ve değiştirmek için güçlü bir psikoterapi yaklaşımıdır. Bu terapi yöntemi, çocukluk döneminde oluşan ve yetişkinlikte sorunlara yol açan şemaları hedef alır.</p>
+        <p class="mb-4">Şema terapi, hayatınızda tekrar eden olumsuz kalıpların kökenlerini anlamak ve değiştirmek için güçlü bir psikoterapi yaklaşımıdır...</p>
         <h3 class="text-lg font-semibold mt-6 mb-2">Şema Terapinin Temel İlkeleri</h3>
         <ul class="list-disc list-inside space-y-4">
             <li><strong>Şemalar:</strong> Çocukluk döneminde oluşan, bireyin kendisi, diğer insanlar ve dünya hakkındaki temel inançlarıdır. Örneğin, "Ben yetersizim" veya "Kimseye güvenemem" gibi düşünceler birer şemadır.</li>
